# mliot-embeddedc-2026-hw

week01/: huynhnhatnam_week01.c
week02/: huynhnhatnam_week02.c
week03/: answers.txt  build_and_flash.bat
week04/: CMakeLists.txt  answers.txt  build_and_flash.bat  button_matrix.c  task3_ledtoggle.c  task4_debounce.c  task5_buttonmatrix.c
week04/task3_ledtoggle/: CMakeLists.txt  task3_ledtoggle.ioc
week04/task3_ledtoggle/Core/Src/: main.c
week04/task4_debounce/: CMakeLists.txt  task4_debounce.ioc
week04/task4_debounce/Core/Src/: main.c
week04/task5_buttonmatrix/: CMakeLists.txt  task5_buttonmatrix.ioc
week04/task5_buttonmatrix/Core/Src/: main.c
